--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         }
     </script>
 
-    <script type="module">
+   <script type="module">
         import { auth, db } from './firebase-config.js';
         import { 
             createUserWithEmailAndPassword, 
@@ -231,14 +231,16 @@
             GoogleAuthProvider, 
             signInWithPopup 
         } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const showError = (elementId, inputId, message) => {
             const errEl = document.getElementById(elementId);
             const inputEl = document.getElementById(inputId);
-            errEl.innerText = message;
-            errEl.style.display = 'block';
-            inputEl.classList.add('input-error');
+            if (errEl) {
+                errEl.innerText = message;
+                errEl.style.display = 'block';
+            }
+            if (inputEl) inputEl.classList.add('input-error');
         };
 
         const resetErrors = () => {
@@ -246,17 +248,27 @@
             document.querySelectorAll('input').forEach(el => el.classList.remove('input-error'));
         };
 
+        // ১. রেজিস্ট্রেশন লজিক
         document.getElementById('btn-register-submit').onclick = async () => {
             resetErrors();
-            const name = document.getElementById('reg-fullname').value;
-            const phone = document.getElementById('reg-phone').value;
-            const email = document.getElementById('reg-email').value;
+            const name = document.getElementById('reg-fullname').value.trim();
+            const phone = document.getElementById('reg-phone').value.trim();
+            const email = document.getElementById('reg-email').value.trim();
             const pass = document.getElementById('reg-password').value;
+
             if(!email || !pass || !name) { alert("সবগুলো ঘর পূরণ করুন"); return; }
+            
             try {
                 const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
                 const user = userCredential.user;
-                await setDoc(doc(db, "users", user.uid), { fullName: name, phone: phone, email: email, uid: user.uid });
+                // Firestore-এ ইউজার প্রোফাইল তৈরি
+                await setDoc(doc(db, "users", user.uid), { 
+                    fullName: name, 
+                    phone: phone, 
+                    email: email, 
+                    uid: user.uid,
+                    createdAt: new Date().toISOString()
+                });
                 window.location.href = 'Dashboard.html';
             } catch (error) {
                 if (error.code === 'auth/email-already-in-use') {
@@ -269,31 +281,52 @@
             }
         };
 
+        // ২. লগইন লজিক
         document.getElementById('btn-login-submit').onclick = async () => {
             resetErrors();
-            const email = document.getElementById('login-email').value;
+            const email = document.getElementById('login-email').value.trim();
             const pass = document.getElementById('login-password').value;
+
+            if(!email || !pass) { alert("ইমেইল এবং পাসওয়ার্ড দিন"); return; }
+
             try {
                 await signInWithEmailAndPassword(auth, email, pass);
                 window.location.href = 'Dashboard.html';
             } catch (error) {
-                if (error.code === 'auth/user-not-found' || error.code === 'auth/wrong-password' || error.code === 'auth/invalid-credential') {
-                    showError('login-email-error', 'login-email', 'ইমেইল বা পাসওয়ার্ড সঠিক নয়।');
-                } else {
-                    alert("লগইন ব্যর্থ: " + error.message);
-                }
+                console.error("Login Error:", error.code);
+                showError('login-email-error', 'login-email', 'ইমেইল বা পাসওয়ার্ড সঠিক নয়।');
             }
         };
 
+        // ৩. গুগল লগইন লজিক (Fixed & Secured)
         document.getElementById('btn-google').onclick = async () => {
             const provider = new GoogleAuthProvider();
             try {
-                await signInWithPopup(auth, provider);
+                const result = await signInWithPopup(auth, provider);
+                const user = result.user;
+
+                // চেক করা হচ্ছে ইউজারের ডাটা Firestore-এ আগে থেকে আছে কি না
+                const userDoc = await getDoc(doc(db, "users", user.uid));
+                
+                if (!userDoc.exists()) {
+                    // নতুন গুগল ইউজার হলে তার তথ্য সেভ করা
+                    await setDoc(doc(db, "users", user.uid), {
+                        fullName: user.displayName,
+                        email: user.email,
+                        uid: user.uid,
+                        photoURL: user.photoURL,
+                        createdAt: new Date().toISOString()
+                    });
+                }
                 window.location.href = 'Dashboard.html';
             } catch (error) {
-                alert("গুগল লগইন ব্যর্থ হয়েছে");
+                console.error("Google Auth Error:", error);
+                if (error.code !== 'auth/popup-closed-by-user') {
+                    alert("গুগল লগইন ব্যর্থ: " + error.message);
+                }
             }
         };
     </script>
 </body>
 </html>
+
