--- a/Dashboard.html
+++ b/Dashboard.html
@@ -235,7 +235,7 @@
                     <small style="color:#777"><i class="fas fa-expand"></i> ${land.area} শতাংশ</small>
                     
                     <div style="margin-top: 10px;">
-                        <a href="${mapUrl}" target="_blank" style="text-decoration:none; font-size:10px; background:#f0f0f0; padding:4px 8px; border-radius:5px; color:#333; display:inline-block;">
+                        <a href="${mapUrl}" style="text-decoration:none; font-size:10px; background:#f0f0f0; padding:4px 8px; border-radius:5px; color:#333; display:inline-block;">
                             <i class="fas fa-location-dot"></i> ম্যাপে দেখুন
                         </a>
                     </div>
@@ -260,6 +260,7 @@
 </script>
 </body>
 </html>
+
 
 
 
