--- a/Dashboard.html
+++ b/Dashboard.html
@@ -215,21 +215,44 @@
         navItems.forEach(item => item.classList.remove('active'));
         navItems[index].classList.add('active');
     }
+function loadContent(pageName) {
+    const iframe = document.getElementById('contentFrame'); // আপনার আইফ্রেমের আইডি
+    iframe.src = pageName + '.html';
+    
+    // শেষ কোন পেজটি খোলা হয়েছে তা সেভ করে রাখা
+    sessionStorage.setItem('lastPage', pageName);
+}
+    // ২. ড্যাশবোর্ড যখনই রিলোড হবে, এই অংশটি চেক করবে শেষ পেজ কোনটি ছিল
+window.addEventListener('DOMContentLoaded', () => {
+    const savedPage = sessionStorage.getItem('currentActivePage');
+    
+    if (savedPage) {
+        // যদি মেমোরিতে কোনো পেজ সেভ থাকে (যেমন MyLand), সেটি লোড হবে
+        loadContent(savedPage);
+    } else {
+        // প্রথমবার লগইন করলে বা কোনো ডাটা না থাকলে ডিফল্ট হোম পেজ দেখাবে
+        loadContent('Home'); 
+    }
+});
 
-    // ২. ডিলিট ফাংশন
-    window.deleteLand = async (id) => { 
-        if(confirm("আপনি কি নিশ্চিত জমিটি মুছে ফেলতে চান?")) { 
-            try {
-                const card = document.getElementById(`card-${id}`);
-                if(card) card.style.opacity = '0.3';
-                await deleteDoc(doc(db, "lands", id));
-            } catch (err) {
-                console.error("Delete Error:", err);
-                alert("ডিলিট করতে সমস্যা হয়েছে");
+// ৩. ডিলিট ফাংশন (আপনার দেয়া কোডটি এখানে ইনপুট দিচ্ছি)
+window.deleteLand = async (id) => { 
+    if(confirm("আপনি কি নিশ্চিত জমিটি মুছে ফেলতে চান?")) { 
+        try {
+            const { doc, deleteDoc } = await import("https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js");
+            const card = document.getElementById(`card-${id}`);
+            if(card) {
+                card.style.transition = '0.3s';
+                card.style.opacity = '0.3';
+                card.style.transform = 'scale(0.9)';
             }
-        } 
-    };
-
+            await deleteDoc(doc(db, "lands", id));
+        } catch (err) {
+            console.error("Delete Error:", err);
+            alert("ডিলিট করতে সমস্যা হয়েছে");
+        }
+    } 
+};
     onAuthStateChanged(auth, async (user) => {
         if (user) {
             const userDoc = await getDoc(doc(db, "users", user.uid));
@@ -296,3 +319,4 @@
 </script>
 </body>
 </html>
+
