--- a/Admin.html
+++ b/Admin.html
@@ -171,7 +171,50 @@
                 adminPanel.classList.add('hidden-content');
             }
         });
+onAuthStateChanged(auth, (user) => {
+    if (user) {
+        // trim() এবং toLowerCase() ব্যবহার করা নিরাপদ
+        const loggedInEmail = user.email.trim().toLowerCase();
+        const adminEmail = ALLOWED_ADMIN_EMAIL.trim().toLowerCase();
 
+        if (loggedInEmail === adminEmail) {
+            authOverlay.classList.add('hidden');
+            adminPanel.classList.remove('hidden-content');
+            document.getElementById('adminNameDisplay').innerText = user.displayName;
+            document.getElementById('adminPhoto').src = user.photoURL;
+            initOrderListener(); 
+        } else {
+            errorMsg.classList.remove('hidden');
+            console.log("ইমেইল ম্যাচ করেনি:", loggedInEmail);
+            // ২ সেকেন্ড পর অটো লগআউট যাতে আবার ট্রাই করা যায়
+            setTimeout(() => signOut(auth), 2000);
+        }
+    } else {
+        authOverlay.classList.remove('hidden');
+        adminPanel.classList.add('hidden-content');
+    }
+});
+            onAuthStateChanged(auth, (user) => {
+    if (user) {
+        // এই নিচের লাইনগুলো আপনার কনসোলে সব সত্যি বলে দেবে
+        console.log("আপনার লগইন করা ইমেইল:", user.email);
+        console.log("কোডে দেওয়া অ্যাডমিন ইমেইল:", ALLOWED_ADMIN_EMAIL);
+        console.log("দুটো কি এক?", user.email.trim() === ALLOWED_ADMIN_EMAIL.trim());
+
+        if (user.email.trim() === ALLOWED_ADMIN_EMAIL.trim()) {
+            authOverlay.classList.add('hidden');
+            adminPanel.classList.remove('hidden-content');
+            // ... বাকি কোড
+        } else {
+            errorMsg.classList.remove('hidden');
+            console.log("ম্যাচ করেনি তাই লগআউট করে দেওয়া হচ্ছে...");
+            setTimeout(() => signOut(auth), 3000);
+        }
+    } else {
+        authOverlay.classList.remove('hidden');
+        adminPanel.classList.add('hidden-content');
+    }
+});
         // ৪. রিয়েল-টাইম ডাটা লিসেনার
         function initOrderListener() {
             const q = query(collection(db, "orders"));
@@ -235,27 +278,6 @@
                 } catch (e) { console.error(e); }
             }
         };
-        onAuthStateChanged(auth, (user) => {
-    if (user) {
-        // এই নিচের লাইনগুলো আপনার কনসোলে সব সত্যি বলে দেবে
-        console.log("আপনার লগইন করা ইমেইল:", user.email);
-        console.log("কোডে দেওয়া অ্যাডমিন ইমেইল:", ALLOWED_ADMIN_EMAIL);
-        console.log("দুটো কি এক?", user.email.trim() === ALLOWED_ADMIN_EMAIL.trim());
-
-        if (user.email.trim() === ALLOWED_ADMIN_EMAIL.trim()) {
-            authOverlay.classList.add('hidden');
-            adminPanel.classList.remove('hidden-content');
-            // ... বাকি কোড
-        } else {
-            errorMsg.classList.remove('hidden');
-            console.log("ম্যাচ করেনি তাই লগআউট করে দেওয়া হচ্ছে...");
-            setTimeout(() => signOut(auth), 3000);
-        }
-    } else {
-        authOverlay.classList.remove('hidden');
-        adminPanel.classList.add('hidden-content');
-    }
-});
     </script>
 </body>
 </html>
