--- a/Admin.html
+++ b/Admin.html
@@ -121,163 +121,121 @@
         </div>
     </div>
 
-    <script type="module">
-        import { db, auth } from './firebase-config.js';
-        // signInWithRedirect এবং getRedirectResult যোগ করা হয়েছে পপ-আপ সমস্যা সমাধানের জন্য
-        import { GoogleAuthProvider, signInWithRedirect, getRedirectResult, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { collection, query, onSnapshot, updateDoc, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+   <script type="module">
+    import { db, auth } from './firebase-config.js';
+    import { GoogleAuthProvider, signInWithRedirect, getRedirectResult, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { collection, query, onSnapshot, updateDoc, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // --- সেফটি সেটিংস ---
-        const ALLOWED_ADMIN_EMAIL = "sabsiddikf@gmail.com"; 
+    const ALLOWED_ADMIN_EMAIL = "sabsiddikf@gmail.com"; 
 
-        const authOverlay = document.getElementById('authOverlay');
-        const adminPanel = document.getElementById('adminPanel');
-        const loginBtn = document.getElementById('loginBtn');
-        const logoutBtn = document.getElementById('logoutBtn');
-        const errorMsg = document.getElementById('errorMsg');
+    const authOverlay = document.getElementById('authOverlay');
+    const adminPanel = document.getElementById('adminPanel');
+    const loginBtn = document.getElementById('loginBtn');
+    const logoutBtn = document.getElementById('logoutBtn');
+    const errorMsg = document.getElementById('errorMsg');
 
-        // ১. লগইন লজিক (Redirect পদ্ধতি ব্যবহার করা হয়েছে)
-        loginBtn.onclick = async () => {
-            const provider = new GoogleAuthProvider();
-            try {
-                // পপ-আপের বদলে সরাসরি রিডাইরেক্ট হবে
-                await signInWithRedirect(auth, provider);
-            } catch (error) {
-                alert("Login Error: " + error.message);
-            }
-        };
+    // ১. লগইন লজিক
+    loginBtn.onclick = async () => {
+        const provider = new GoogleAuthProvider();
+        try {
+            await signInWithRedirect(auth, provider);
+        } catch (error) {
+            alert("Login Error: " + error.message);
+        }
+    };
 
-        // লগইনের পর ফলাফল চেক করা
-        getRedirectResult(auth).catch((error) => {
-            console.error("Redirect Error:", error);
-        });
+    // ২. লগআউট লজিক
+    logoutBtn.onclick = () => signOut(auth);
 
-        // ২. লগআউট লজিক
-        logoutBtn.onclick = () => signOut(auth);
+    // ৩. একমাত্র এবং সঠিক অথেনটিকেশন চেক
+    onAuthStateChanged(auth, (user) => {
+        if (user) {
+            const userEmail = user.email.toLowerCase().trim();
+            const adminEmail = ALLOWED_ADMIN_EMAIL.toLowerCase().trim();
 
-        // ৩. অথেনটিকেশন স্টেট চেক
-        onAuthStateChanged(auth, (user) => {
-            if (user && user.email === ALLOWED_ADMIN_EMAIL) {
+            if (userEmail === adminEmail) {
+                // সাকসেসফুল লগইন
                 authOverlay.classList.add('hidden');
                 adminPanel.classList.remove('hidden-content');
                 document.getElementById('adminNameDisplay').innerText = user.displayName;
                 document.getElementById('adminPhoto').src = user.photoURL;
                 initOrderListener(); 
-            } else if (user) {
-                errorMsg.classList.remove('hidden');
-                setTimeout(() => signOut(auth), 2000);
             } else {
-                authOverlay.classList.remove('hidden');
-                adminPanel.classList.add('hidden-content');
+                // ভুল ইমেইল দিয়ে লগইন করলে
+                errorMsg.innerText = "You are not authorized as an Admin!";
+                errorMsg.classList.remove('hidden');
+                setTimeout(() => signOut(auth), 2500);
             }
-        });
-onAuthStateChanged(auth, (user) => {
-    if (user) {
-        // trim() এবং toLowerCase() ব্যবহার করা নিরাপদ
-        const loggedInEmail = user.email.trim().toLowerCase();
-        const adminEmail = ALLOWED_ADMIN_EMAIL.trim().toLowerCase();
-
-        if (loggedInEmail === adminEmail) {
-            authOverlay.classList.add('hidden');
-            adminPanel.classList.remove('hidden-content');
-            document.getElementById('adminNameDisplay').innerText = user.displayName;
-            document.getElementById('adminPhoto').src = user.photoURL;
-            initOrderListener(); 
         } else {
-            errorMsg.classList.remove('hidden');
-            console.log("ইমেইল ম্যাচ করেনি:", loggedInEmail);
-            // ২ সেকেন্ড পর অটো লগআউট যাতে আবার ট্রাই করা যায়
-            setTimeout(() => signOut(auth), 2000);
+            // লগআউট অবস্থায় থাকলে
+            authOverlay.classList.remove('hidden');
+            adminPanel.classList.add('hidden-content');
         }
-    } else {
-        authOverlay.classList.remove('hidden');
-        adminPanel.classList.add('hidden-content');
-    }
-});
-            onAuthStateChanged(auth, (user) => {
-    if (user) {
-        // এই নিচের লাইনগুলো আপনার কনসোলে সব সত্যি বলে দেবে
-        console.log("আপনার লগইন করা ইমেইল:", user.email);
-        console.log("কোডে দেওয়া অ্যাডমিন ইমেইল:", ALLOWED_ADMIN_EMAIL);
-        console.log("দুটো কি এক?", user.email.trim() === ALLOWED_ADMIN_EMAIL.trim());
+    });
 
-        if (user.email.trim() === ALLOWED_ADMIN_EMAIL.trim()) {
-            authOverlay.classList.add('hidden');
-            adminPanel.classList.remove('hidden-content');
-            // ... বাকি কোড
-        } else {
-            errorMsg.classList.remove('hidden');
-            console.log("ম্যাচ করেনি তাই লগআউট করে দেওয়া হচ্ছে...");
-            setTimeout(() => signOut(auth), 3000);
-        }
-    } else {
-        authOverlay.classList.remove('hidden');
-        adminPanel.classList.add('hidden-content');
-    }
-});
-        // ৪. রিয়েল-টাইম ডাটা লিসেনার
-        function initOrderListener() {
-            const q = query(collection(db, "orders"));
-            onSnapshot(q, (snapshot) => {
-                let content = "";
-                let pendingCount = 0;
-                let completedCount = 0;
-                
-                snapshot.forEach((orderDoc) => {
-                    const order = orderDoc.data();
-                    const id = orderDoc.id;
-                    if(order.status === 'pending') pendingCount++;
-                    if(order.status === 'completed') completedCount++;
+    // ৪. ডাটা লিসেনার (বাকি ফাংশনগুলো আগের মতোই থাকবে)
+    function initOrderListener() {
+        const q = query(collection(db, "orders"));
+        onSnapshot(q, (snapshot) => {
+            let content = "";
+            let pendingCount = 0;
+            let completedCount = 0;
+            
+            snapshot.forEach((orderDoc) => {
+                const order = orderDoc.data();
+                const id = orderDoc.id;
+                if(order.status === 'pending') pendingCount++;
+                if(order.status === 'completed') completedCount++;
 
-                    content += `
-                        <tr class="order-card">
-                            <td class="py-4">
-                                <p class="font-semibold">${order.userName || 'Anonymous'}</p>
-                                <p class="text-xs text-gray-400">UID: ${order.userId ? order.userId.substring(0,8) : 'N/A'}...</p>
-                            </td>
-                            <td class="py-4 font-medium text-blue-300">${order.serviceType}</td>
-                            <td class="py-4 text-sm text-gray-200">${order.landName || 'Not Specified'}</td>
-                            <td class="py-4">
-                                <span class="px-3 py-1 rounded-full text-xs ${getStatusClass(order.status)}">
-                                    ${order.status ? order.status.toUpperCase() : 'PENDING'}
-                                </span>
-                            </td>
-                            <td class="py-4 text-center">
-                                <div class="flex justify-center gap-2">
-                                    <button onclick="updateOrderStatus('${id}', 'processing')" class="p-2 hover:bg-yellow-500/20 text-yellow-400"><i class="fas fa-spinner"></i></button>
-                                    <button onclick="updateOrderStatus('${id}', 'completed')" class="p-2 hover:bg-green-500/20 text-green-400"><i class="fas fa-check"></i></button>
-                                    <button onclick="deleteOrder('${id}')" class="p-2 hover:bg-red-500/20 text-red-400"><i class="fas fa-trash"></i></button>
-                                </div>
-                            </td>
-                        </tr>`;
-                });
-                document.getElementById('orderTableBody').innerHTML = content;
-                document.getElementById('totalOrdersCount').innerText = snapshot.size;
-                document.getElementById('pendingOrdersCount').innerText = pendingCount;
-                document.getElementById('completedOrdersCount').innerText = completedCount;
+                content += `
+                    <tr class="order-card">
+                        <td class="py-4">
+                            <p class="font-semibold">${order.userName || 'Anonymous'}</p>
+                            <p class="text-xs text-gray-400">UID: ${order.userId ? order.userId.substring(0,8) : 'N/A'}...</p>
+                        </td>
+                        <td class="py-4 font-medium text-blue-300">${order.serviceType}</td>
+                        <td class="py-4 text-sm text-gray-200">${order.landName || 'Not Specified'}</td>
+                        <td class="py-4">
+                            <span class="px-3 py-1 rounded-full text-xs ${getStatusClass(order.status)}">
+                                ${order.status ? order.status.toUpperCase() : 'PENDING'}
+                            </span>
+                        </td>
+                        <td class="py-4 text-center">
+                            <div class="flex justify-center gap-2">
+                                <button onclick="updateOrderStatus('${id}', 'processing')" class="p-2 hover:bg-yellow-500/20 text-yellow-400"><i class="fas fa-spinner"></i></button>
+                                <button onclick="updateOrderStatus('${id}', 'completed')" class="p-2 hover:bg-green-500/20 text-green-400"><i class="fas fa-check"></i></button>
+                                <button onclick="deleteOrder('${id}')" class="p-2 hover:bg-red-500/20 text-red-400"><i class="fas fa-trash"></i></button>
+                            </div>
+                        </td>
+                    </tr>`;
             });
-        }
+            document.getElementById('orderTableBody').innerHTML = content;
+            document.getElementById('totalOrdersCount').innerText = snapshot.size;
+            document.getElementById('pendingOrdersCount').innerText = pendingCount;
+            document.getElementById('completedOrdersCount').innerText = completedCount;
+        });
+    }
 
-        function getStatusClass(status) {
-            if(status === 'pending') return 'bg-yellow-500/20 text-yellow-400 border border-yellow-500/30';
-            if(status === 'processing') return 'bg-blue-500/20 text-blue-400 border border-blue-500/30';
-            if(status === 'completed') return 'bg-green-500/20 text-green-400 border border-green-500/30';
-            return 'bg-gray-500/20 text-gray-400';
-        }
+    function getStatusClass(status) {
+        if(status === 'pending') return 'bg-yellow-500/20 text-yellow-400 border border-yellow-500/30';
+        if(status === 'processing') return 'bg-blue-500/20 text-blue-400 border border-blue-500/30';
+        if(status === 'completed') return 'bg-green-500/20 text-green-400 border border-green-500/30';
+        return 'bg-gray-500/20 text-gray-400';
+    }
 
-        window.updateOrderStatus = async (id, newStatus) => {
+    window.updateOrderStatus = async (id, newStatus) => {
+        try {
+            await updateDoc(doc(db, "orders", id), { status: newStatus });
+        } catch (e) { console.error(e); }
+    };
+
+    window.deleteOrder = async (id) => {
+        if(confirm('Cancel order?')) {
             try {
-                await updateDoc(doc(db, "orders", id), { status: newStatus });
+                await deleteDoc(doc(db, "orders", id));
             } catch (e) { console.error(e); }
-        };
-
-        window.deleteOrder = async (id) => {
-            if(confirm('Cancel order?')) {
-                try {
-                    await deleteDoc(doc(db, "orders", id));
-                } catch (e) { console.error(e); }
-            }
-        };
-    </script>
+        }
+    };
+</script>
 </body>
 </html>
