--- a/Admin.html
+++ b/Admin.html
@@ -121,7 +121,7 @@
         </div>
     </div>
 
-   <script type="module">
+  <script type="module">
     import { db, auth } from './firebase-config.js';
     import { GoogleAuthProvider, signInWithRedirect, getRedirectResult, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     import { collection, query, onSnapshot, updateDoc, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
@@ -145,35 +145,50 @@
     };
 
     // ২. লগআউট লজিক
-    logoutBtn.onclick = () => signOut(auth);
+    logoutBtn.onclick = async () => {
+        await signOut(auth);
+        window.location.reload(); // ক্লিন লগআউট
+    };
 
-    // ৩. একমাত্র এবং সঠিক অথেনটিকেশন চেক
-    onAuthStateChanged(auth, (user) => {
-        if (user) {
-            const userEmail = user.email.toLowerCase().trim();
-            const adminEmail = ALLOWED_ADMIN_EMAIL.toLowerCase().trim();
+    // ৩. রিডাইরেক্ট হ্যান্ডলিং এবং অথেনটিকেশন চেক
+    async function checkAuth() {
+        try {
+            // রিডাইরেক্ট হয়ে ফিরে আসার পর ডাটা ধরা
+            await getRedirectResult(auth);
+            
+            onAuthStateChanged(auth, (user) => {
+                if (user) {
+                    const userEmail = user.email.toLowerCase().trim();
+                    const adminEmail = ALLOWED_ADMIN_EMAIL.toLowerCase().trim();
 
-            if (userEmail === adminEmail) {
-                // সাকসেসফুল লগইন
-                authOverlay.classList.add('hidden');
-                adminPanel.classList.remove('hidden-content');
-                document.getElementById('adminNameDisplay').innerText = user.displayName;
-                document.getElementById('adminPhoto').src = user.photoURL;
-                initOrderListener(); 
-            } else {
-                // ভুল ইমেইল দিয়ে লগইন করলে
-                errorMsg.innerText = "You are not authorized as an Admin!";
-                errorMsg.classList.remove('hidden');
-                setTimeout(() => signOut(auth), 2500);
-            }
-        } else {
-            // লগআউট অবস্থায় থাকলে
-            authOverlay.classList.remove('hidden');
-            adminPanel.classList.add('hidden-content');
+                    if (userEmail === adminEmail) {
+                        // সাকসেসফুল অ্যাডমিন লগইন
+                        authOverlay.classList.add('hidden');
+                        adminPanel.classList.remove('hidden-content');
+                        document.getElementById('adminNameDisplay').innerText = user.displayName;
+                        document.getElementById('adminPhoto').src = user.photoURL;
+                        initOrderListener(); 
+                    } else {
+                        // ভুল ইমেইল হলে
+                        errorMsg.innerText = "Access Denied: You are not an Admin!";
+                        errorMsg.classList.remove('hidden');
+                        setTimeout(() => signOut(auth), 3000);
+                    }
+                } else {
+                    // লগইন নেই
+                    authOverlay.classList.remove('hidden');
+                    adminPanel.classList.add('hidden-content');
+                }
+            });
+        } catch (error) {
+            console.error("Auth Error:", error);
         }
-    });
+    }
 
-    // ৪. ডাটা লিসেনার (বাকি ফাংশনগুলো আগের মতোই থাকবে)
+    // পেজ লোড হলে চেক শুরু হবে
+    checkAuth();
+
+    // ৪. রিয়েল-টাইম ডাটা লিসেনার
     function initOrderListener() {
         const q = query(collection(db, "orders"));
         onSnapshot(q, (snapshot) => {
@@ -202,9 +217,9 @@
                         </td>
                         <td class="py-4 text-center">
                             <div class="flex justify-center gap-2">
-                                <button onclick="updateOrderStatus('${id}', 'processing')" class="p-2 hover:bg-yellow-500/20 text-yellow-400"><i class="fas fa-spinner"></i></button>
-                                <button onclick="updateOrderStatus('${id}', 'completed')" class="p-2 hover:bg-green-500/20 text-green-400"><i class="fas fa-check"></i></button>
-                                <button onclick="deleteOrder('${id}')" class="p-2 hover:bg-red-500/20 text-red-400"><i class="fas fa-trash"></i></button>
+                                <button onclick="updateOrderStatus('${id}', 'processing')" class="p-2 hover:bg-yellow-500/20 text-yellow-400" title="Processing"><i class="fas fa-spinner"></i></button>
+                                <button onclick="updateOrderStatus('${id}', 'completed')" class="p-2 hover:bg-green-500/20 text-green-400" title="Complete"><i class="fas fa-check"></i></button>
+                                <button onclick="deleteOrder('${id}')" class="p-2 hover:bg-red-500/20 text-red-400" title="Delete"><i class="fas fa-trash"></i></button>
                             </div>
                         </td>
                     </tr>`;
